[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/d_daok_cosas_strip10.png" type="Texture" id=1]
[ext_resource path="res://sprites/d_daok_piezas_strip13.png" type="Texture" id=2]
[ext_resource path="res://sprites/d_daok_edificios_strip25.png" type="Texture" id=3]
[ext_resource path="res://scenes/otros/Actividad.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/otros/Puerta.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Estudio.gd" type="Script" id=6]
[ext_resource path="res://sounds/a_escribe.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/a_libro.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/a_poner.wav" type="AudioStream" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 37.5
height = 71.0

[sub_resource type="Animation" id=2]
resource_name = "Go"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Imagen/Telescopio:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Imagen/Telescopio:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="Estudio" type="Node2D" groups=["ediEstudio", "ediffice", "porton", "robable"]]
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Solido" type="Area2D" parent="."]
position = Vector2( 4, 0 )
rotation = 1.5708
collision_layer = 9
collision_mask = 0
input_pickable = false
monitoring = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Solido"]
position = Vector2( 2.5, 5 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Imagen" type="Node2D" parent="." groups=["imagen"]]
__meta__ = {
"_edit_lock_": true
}

[node name="Fondo" type="Sprite" parent="Imagen"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 11
__meta__ = {
"_edit_lock_": true
}

[node name="Libro1" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -8, -40 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 5
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Libro2" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -22, -38 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 5
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Libro3" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -37, -34 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 5
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Libro4" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -46, -26 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 5
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Telescopio" type="Sprite" parent="Imagen"]
position = Vector2( -1, -136 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -57, -116 )
hframes = 13
frame = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Ventana" type="Node2D" parent="Imagen" groups=["interior"]]
position = Vector2( 1, -93 )
__meta__ = {
"_edit_lock_": true
}

[node name="Salon" type="Node2D" parent="Imagen"]
__meta__ = {
"_edit_lock_": true
}

[node name="Sala1" type="Node2D" parent="Imagen/Salon"]
position = Vector2( -27, -8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sala2" type="Node2D" parent="Imagen/Salon"]
position = Vector2( 35, 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sala" type="YSort" parent="Imagen/Salon" groups=["interior"]]
__meta__ = {
"_edit_lock_": true
}

[node name="Frente" type="Sprite" parent="Imagen"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Actividad" parent="Imagen" instance=ExtResource( 4 )]

[node name="Fin" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Fin1" type="Node2D" parent="Fin"]
__meta__ = {
"_edit_lock_": true
}

[node name="Fin2" type="Node2D" parent="Fin"]
position = Vector2( -16, -17 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin3" type="Node2D" parent="Fin"]
position = Vector2( -48, -12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin4" type="Node2D" parent="Fin"]
position = Vector2( -51, 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin5" type="Node2D" parent="Fin"]
position = Vector2( -17, 27 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin6" type="Node2D" parent="Fin"]
position = Vector2( 19, 27 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin7" type="Node2D" parent="Fin"]
position = Vector2( 47, 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin8" type="Node2D" parent="Fin"]
position = Vector2( 51, -13 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin9" type="Node2D" parent="Fin"]
position = Vector2( 23, -20 )
__meta__ = {
"_edit_lock_": true
}

[node name="Puerta" parent="." instance=ExtResource( 5 )]
position = Vector2( 45, 44 )

[node name="Lapix" type="Timer" parent="."]
one_shot = true

[node name="Anima" type="AnimationPlayer" parent="."]
anims/Go = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Sonido" type="AudioStreamPlayer2D" parent="." groups=["sonido"]]
stream = ExtResource( 7 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[node name="SonidoLibro" type="AudioStreamPlayer2D" parent="." groups=["sonido"]]
stream = ExtResource( 8 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[node name="SPoner" type="AudioStreamPlayer2D" parent="." groups=["sonido"]]
stream = ExtResource( 9 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[connection signal="toggled" from="Imagen/Actividad" to="." method="_on_Actividad_toggled"]
[connection signal="timeout" from="Lapix" to="." method="_on_Lapix_timeout"]
